--- a/src/components/Modal/simpleModal.css
+++ b/src/components/Modal/simpleModal.css
@@ -1,9 +1,9 @@
  
 @media(width<550px){
-    .content__Modal{
+    /* .content__Modal{
         /* display: flex;
         align-items: center; */
-    }
+    /* } */ */
     .content__Modal img{
         border-radius: 5px;
         /* width: 80%; */
@@ -14,9 +14,9 @@
         box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
         padding-bottom: 15px;
     }
-    .transition-modal-title{
+    /* .transition-modal-title{
     
-    }
+    } */
     .titletagline{
     margin: 7px 0px;
     }
