--- a/src/components/Modal/simpleModal.css
+++ b/src/components/Modal/simpleModal.css
@@ -10,10 +10,24 @@
         box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
         padding-bottom: 15px;
     }
-    /* .transition-modal-title{
-    
-    } */
+    .transition-modal-title{
+    padding-bottom: 0%;
+    }
+    .closebtn{
+        /* margin-left:'90%';
+         background-color:'red';
+         color:'white';
+         font-size: large; */
+         background-color: red;
+         width: fit-content;
+         padding: 3px;
+         margin-left: 90%;
+         font-size: 20px;
+         border-radius: 40%;
+         object-fit: contain;
+
+    }
     .titletagline{
-    margin: 7px 0px;
+    margin: 8px 0px;
     }
 }
